Fixed user, gutenberg endpoints (#100)
* Fixed user, gutenberg endpoints

* removing logging

* Removing comments